src/objects/ServiceParticipation__c.object
<CustomObject>
    <description>Models the participation of a client in a service.</description>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>New Beginnings advocate responsible for this service participation.</description>
        <inlineHelpText>New Beginnings advocate responsible for this service participation.</inlineHelpText>
        <label>Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ServiceParticipations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to support batch entry.</description>
        <inlineHelpText>Used to support batch entry.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>Service_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Record__c</fullName>
        <description>The Case Record under which this Client participated or was provided the Service.</description>
        <inlineHelpText>The Case Record under which this Client participated or was provided the Service.</inlineHelpText>
        <label>Case Record</label>
        <referenceTo>Case_Record__c</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Participant__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Child__r.Id, 
Program_Enrollment__r.Child__r.FirstName + &apos; &apos; +  Program_Enrollment__r.Child__r.LastName)</formula>
        <label>Child Participant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a lookup to the child record for which we created this service participation. This field will be automatically populated when the service participation is created by using the enrollment child lookup value if it exists.</description>
        <label>Child</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Participations (Child)</relationshipLabel>
        <relationshipName>Service_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Interpreter_was_used__c</fullName>
        <description>Duration the interpreter was used during this service participation. Must not exceed duration of service.</description>
        <inlineHelpText>Duration the interpreter was used during this service participation. Must not exceed duration of service.</inlineHelpText>
        <label>Duration Interpreter was used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Of_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify the first participation in certain groups by the type of that service participation</description>
        <inlineHelpText>Used to identify the first participation in certain groups by the type of that service participation</inlineHelpText>
        <label>First Of Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goals_Week__c</fullName>
        <description>Week number for goals.</description>
        <inlineHelpText>Week number for goals.</inlineHelpText>
        <label>Goals Week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Goals</label>
        <picklist>
            <controllingField>Goals_Week__c</controllingField>
            <picklistValues>
                <fullName>1 Docs: Obtain important: (Pic ID, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Docs: Req funding for important docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Docs:  Important docs obtained?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 DV Ed: Review last week. Thoughts?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 DV Education: Week 1 (DV 101)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 DV Ed: Week 2 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 DV Ed: Week 3 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 DV Ed: Week 4 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 DV Ed: Week 5 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 DV Ed: Week 6 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 DV Ed: Week 7 / Topic entered in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 Finance:  SS Plan - Edu, Job, SSDI,etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Finance:  DSHS (Food Stamps, TANF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Finance:  DSHS (Med Coupons)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Finance: Resume / Job search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Finance: Actively seeking employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Finance: Barriers to Self-Suffncy Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Health: Basic Health/MH resource needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Complete Housing Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Families - Discuss alt to FHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Fam - Obtain FHC ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Fam - Sign up for FHC assesmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Fam- Update FHC Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Housing: Go over THP guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Housing: Fam -  FHC appt.(Date &amp; loc?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Housing: Go over unfinished apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Housing: Tips/Barriers/Ways to address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Housing: Search /Open apps./ New Oppty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Housing:  Self-Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Legal: Explain Legal Resources/Options</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hours_New_To_Group__c</fullName>
        <description>This formula exists just to simplify building reports, to make it more straightforward to total the &quot;new to group&quot; and &quot;still active in group&quot; numbers</description>
        <formula>if( First_Of_Type__c, Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula exists just to simplify building reports, to make it more straightforward to total the &quot;new to group&quot; and &quot;still active in group&quot; numbers</inlineHelpText>
        <label>Hours: New To Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Still_Active_In_Group__c</fullName>
        <description>This formula exists just to simplify building reports, to make it more straightforward to total the &quot;new to group&quot; and &quot;still active in group&quot; numbers</description>
        <formula>if(First_Of_Type__c, 0, Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula exists just to simplify building reports, to make it more straightforward to total the &quot;new to group&quot; and &quot;still active in group&quot; numbers</inlineHelpText>
        <label>Hours: Still Active In Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interpreter_language_used__c</fullName>
        <label>Interpreter language used</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Participation case notes.</description>
        <inlineHelpText>Participation case notes.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <formula>Case_Record__r.Contact__r.FirstName + &apos; &apos; +  Case_Record__r.Contact__r.LastName</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agency to which this Service Participant was referred to.</description>
        <inlineHelpText>Agency to which this Service Participant was referred to.</inlineHelpText>
        <label>Referred To Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>Service_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st appointment confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topics_of_Legal_Advocacy__c</fullName>
        <label>Topics of Legal Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>Address confidentiality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidentiality / relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court order(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court prep / accompaniment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crime Victims Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody/Visitation Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency/CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissolution / separation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord / tenant advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders - Anti-Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders - No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders - Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenting Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Benefits/Financial Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney appointment accompaniment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court accompaniment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Case Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpline - Business Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpline - Crisis Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake/Child Assessment with Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Case Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpreter Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Clinic appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Clinic Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Intern Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-on-One Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenting Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Referrals_Given__c</fullName>
        <inlineHelpText>Select the types of referrals / resources given to Participant during meeting.  You must enter the name of the actual program / service they are referred to in the &quot;Notes&quot; field above. Simply picking items out of the list will not satisfy City of Seattle.</inlineHelpText>
        <label>Types of Referrals / Resources Given</label>
        <picklist>
            <picklistValues>
                <fullName>ACP (Address Confidentiality Prog)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare/Respite Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culturally Appropriate Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DV Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E.S.L (English Second Language)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Medication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpreter Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (explain in Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Skill Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Group Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Was_an_Interpreter_Used__c</fullName>
        <label>Was an Interpreter Used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASL/TTY Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Participation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Record__c</columns>
        <columns>Date_of_Service__c</columns>
        <columns>Hours__c</columns>
        <columns>Participant_Name__c</columns>
        <columns>Advocate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Service Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Participations</pluralLabel>
    <recordTypes>
        <fullName>CDVRT</fullName>
        <active>false</active>
        <label>CDVRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Children</fullName>
        <active>true</active>
        <description>CAP Children</description>
        <label>CAP Children</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exit</fullName>
        <active>true</active>
        <description>Record type should be used when exiting a participant.</description>
        <label>Exit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Advocacy</fullName>
        <active>false</active>
        <label>Legal Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mental_Health</fullName>
        <active>false</active>
        <label>Mental Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>SH_Children</fullName>
        <active>true</active>
        <description>Shelter Children</description>
        <label>SH Children</label>
    </recordTypes>
    <recordTypes>
        <fullName>SH_DV_Advocacy</fullName>
        <active>true</active>
        <description>Shelter DV Advocacy</description>
        <label>SH DV Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Women_s_Advocacy</fullName>
        <active>true</active>
        <description>CAP Women&apos;s Advocacy Program Specifc Record Type (incl Bilingual and Shoreline)</description>
        <label>CAP Women&apos;s Advocacy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_participation_dates</fullName>
        <active>true</active>
        <description>Check that for any service participation (except legal advocacy),  the service date &gt;= case record.Intake date and &lt;= Exit date. Service participation has to take place between Intake and Exit dates.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName &lt;&gt; &apos;Legal Advocacy&apos;,  OR (Date_of_Service__c &lt; Case_Record__r.Intake_Date__c,  Date_of_Service__c &gt; Case_Record__r.Exit_Date__c))</errorConditionFormula>
        <errorDisplayField>Date_of_Service__c</errorDisplayField>
        <errorMessage>Date of Service cannot be before the case record&apos;s Intake Date or after the case record&apos;s Exit Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Duration_of_Interpreter_Validation</fullName>
        <active>true</active>
        <description>Duration of Interpreter cannot exceed duration of service participation.</description>
        <errorConditionFormula>Duration_Interpreter_was_used__c &gt;  Hours__c</errorConditionFormula>
        <errorDisplayField>Duration_Interpreter_was_used__c</errorDisplayField>
        <errorMessage>Interpreter duration cannot exceed number of service hours provided for this participation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_service_part_for_Exited_CR</fullName>
        <active>true</active>
        <description>Prevent the saving of a service participation for an Exited case record.</description>
        <errorConditionFormula>ISPICKVAL(Case_Record__r.Status__c,&apos;Exited&apos;)</errorConditionFormula>
        <errorMessage>You cannot create a service participation for an Exited case record.</errorMessage>
    </validationRules>
</CustomObject>